# Opportunity-Finder-App

./: .env.example  .gitignore  PLAN.md  README.md  new.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
.github/workflows/: scrape.yml
apps/mobile/: app.json  eslint.config.js  global.css  metro.config.js  package.json  tailwind.config.js
apps/mobile/app/: +not-found.tsx  _layout.tsx  index.tsx
apps/mobile/app/(auth)/: sign-in.tsx
apps/mobile/app/(tabs)/: _layout.tsx  alerts.tsx  explore.tsx  index.tsx  profile.tsx  saved.tsx
apps/mobile/app/onboarding/: _layout.tsx  account.tsx  (+4 more)
apps/mobile/convex/: auth.config.ts  crons.ts  http.ts  interests.ts  notifications.ts  opportunities.ts  profile.ts  pushTokens.ts  reminders.ts  saves.ts  schema.ts  sources.ts  users.ts  validators.ts
apps/mobile/lib/: alerts.ts  categories.ts  deadline.ts  feed.ts  opportunityDetail.ts  saved.ts  search.ts  text.ts  useDebounce.ts
docs/superpowers/plans/: 2026-06-01-settings-appearance-language-notifications.md
docs/superpowers/specs/: 2026-05-31-onboarding-flow-design.md  2026-06-01-settings-appearance-language-notifications-design.md
scraper/: README.md  pyproject.toml
scraper/scripts/: seed.py  seed_data.json
scraper/src/: __init__.py  config.py  convex_client.py  deduper.py  enricher.py  extractor.py  logging_config.py  models.py  pipeline.py
scraper/src/fetchers/: __init__.py  static.py
scraper/src/sources/: __init__.py  afterschoolafrica.yaml  anpetogo.yaml  campusfrance.yaml  emploitogo.yaml  loader.py  scholars4dev.yaml
(+42 files in other folders)
