[project]
name = "opportunity-finder-scraper"
version = "0.1.0"
description = "LLM-powered scraper extracting structured opportunity data into Convex."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.4.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "convex>=0.6.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
